[project]
name = "bus-reports-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "more-itertools>=10.5.0",
    "notebook>=7.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]
